# cgis

./: .gitignore  Dockerfile  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: auth.py  chatbot.py  config.py  database.py  extraction.py  llm.py  main.py  rate_limit.py
backend/app/routers/: admin.py  chat.py  dashboard.py  grievances.py
frontend/: admin.html  chat.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: admin.ts  api.ts  bubble.ts  chat.ts  dashboard.ts  types.ts
frontend/src/styles/: charts.css  components.css  tokens.css
tests/: conftest.py  test_admin_auth.py  test_chatbot.py  test_dashboard_api.py  test_extraction.py  test_grievances_api.py  test_plan_backend.md  test_plan_e2e.md  test_plan_frontend.md  test_supabase_connection.py
tests/playwright/: playwright.config.ts  test_ui.spec.ts
